--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -275,6 +275,7 @@ CONFIG_PKG_cryptodev=y
 CONFIG_PKG_crystalhd=y
 # CONFIG_PKG_cwiid is not set
 CONFIG_PKG_drivers-jmicron-ethernet=m
+# CONFIG_PKG_egtouch is not set
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_gutenprint is not set
 # CONFIG_PKG_hplip is not set
@@ -337,6 +338,7 @@ CONFIG_PKG_ntfs-3g=y
 # CONFIG_PKG_firmware-dvb-xc3028 is not set
 CONFIG_PKG_firmware-graphics-nouveau=y
 CONFIG_PKG_firmware-graphics-radeon=y
+# CONFIG_PKG_firmware-ivtv is not set
 CONFIG_PKG_firmware-nic-wifi-realtek=y
 # CONFIG_PKG_firmware-ux500 is not set
 CONFIG_PKG_firmware-wifi-acx100=y
