--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -277,6 +277,7 @@ CONFIG_PKG_cryptodev=y
 CONFIG_PKG_crystalhd=y
 CONFIG_PKG_cwiid=y
 CONFIG_PKG_drivers-jmicron-ethernet=m
+CONFIG_PKG_egtouch=m
 CONFIG_PKG_eventlircd=y
 # CONFIG_PKG_gutenprint is not set
 # CONFIG_PKG_hplip is not set
@@ -339,6 +340,7 @@ CONFIG_PKG_firmware-dvb-wt220u=y
 CONFIG_PKG_firmware-dvb-xc3028=y
 CONFIG_PKG_firmware-graphics-nouveau=y
 CONFIG_PKG_firmware-graphics-radeon=y
+CONFIG_PKG_firmware-ivtv=m
 CONFIG_PKG_firmware-nic-wifi-realtek=y
 # CONFIG_PKG_firmware-ux500 is not set
 CONFIG_PKG_firmware-wifi-acx100=y
