--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -243,6 +243,7 @@ CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_crystalhd is not set
 # CONFIG_PKG_cwiid is not set
 # CONFIG_PKG_drivers-jmicron-ethernet is not set
+# CONFIG_PKG_egtouch is not set
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_gutenprint is not set
 # CONFIG_PKG_hplip is not set
@@ -304,6 +305,7 @@ CONFIG_PKG_parted=y
 # CONFIG_PKG_firmware-dvb-xc3028 is not set
 # CONFIG_PKG_firmware-graphics-nouveau is not set
 # CONFIG_PKG_firmware-graphics-radeon is not set
+# CONFIG_PKG_firmware-ivtv is not set
 # CONFIG_PKG_firmware-nic-wifi-realtek is not set
 # CONFIG_PKG_firmware-ux500 is not set
 # CONFIG_PKG_firmware-wifi-acx100 is not set
