--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -311,6 +311,7 @@ CONFIG_PKG_firmware-dvb-wt220u=y
 CONFIG_PKG_firmware-dvb-xc3028=y
 # CONFIG_PKG_firmware-graphics-nouveau is not set
 # CONFIG_PKG_firmware-graphics-radeon is not set
+# CONFIG_PKG_firmware-ivtv is not set
 CONFIG_PKG_firmware-nic-wifi-realtek=y
 # CONFIG_PKG_firmware-ux500 is not set
 CONFIG_PKG_firmware-wifi-acx100=y
