--- a/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
@@ -312,6 +312,7 @@ CONFIG_PKG_firmware-dvb-wt220u=y
 CONFIG_PKG_firmware-dvb-xc3028=y
 CONFIG_PKG_firmware-graphics-nouveau=y
 # CONFIG_PKG_firmware-graphics-radeon is not set
+# CONFIG_PKG_firmware-ivtv is not set
 # CONFIG_PKG_firmware-nic-wifi-realtek is not set
 # CONFIG_PKG_firmware-ux500 is not set
 # CONFIG_PKG_firmware-wifi-acx100 is not set
