libiconv : fix build

--- a/packages/libiconv/build
+++ b/packages/libiconv/build
@@ -3,7 +3,7 @@
 . config/options
 
 cd $BUILD/$1*
-
+sed -i '/gets is a security hole/d' srclib/stdio.in.h
 do_configure \
             --disable-nls \
             --enable-extra-encodings
