--- a/packages/libplist/build
+++ b/packages/libplist/build
@@ -8,7 +8,7 @@ cd $PKG_BUILD_DIR
 mkdir -p obj-target
 cd obj-target
 cmake -DCMAKE_INSTALL_PREFIX=/usr \
-      -DENABLE_PYTHON="OFF" \
+      -DENABLE_CYTHON=OFF \
       -DCMAKE_FIND_ROOT_PATH=$LIB_PREFIX \
       ..
 
