samba-server : add some comments how to add a specific user for samba

--- a/packages/samba-server/config/smb.conf
+++ b/packages/samba-server/config/smb.conf
@@ -5,6 +5,8 @@
   socket options = TCP_NODELAY SO_RCVBUF=8192 SO_SNDBUF=8192
   wins support = no
   syslog only = yes
+  netbios name = openbricks
+  workgroup = WORKGROUP
 
 [root]
   path = /
@@ -12,6 +14,29 @@
   browsable = yes
   public = yes
   writable = yes
+
+# To add a writable share with a specific user :
+# create user 'joe' with :
+# 
+# cp /etc/passwd /etc/passwd.bak
+# cp /etc/group /etc/group.bak
+# cp /etc/shadow /etc/shadow.bak
+# echo "joe:x:1000:1000:joe:/home/joe:/bin/sh" >>/etc/passwd
+# echo "joe:x:15020:0:99999:7:::" >>/etc/shadow
+# echo "joe:x:1000:" >>/etc/group
+# passwd joe
+# mkdir /home/joe
+# chown joe:joe /home/joe
+# smbpasswd -a joe
+#
+#
+
+;[myshare]
+;  path = /home/joe
+;  browsable = yes
+;  guest ok = no
+;  writable = yes
+;  username = joe
 
 # To add a writable share of a disk under /mnt uncomment and edit the 
 # following share declaration
