libxml2: disable lzma

--- a/packages/libxml2/build
+++ b/packages/libxml2/build
@@ -11,7 +11,8 @@ cd objdir-host
 do_configure host \
             --enable-ipv6=no \
             --without-python \
-            --with-zlib
+            --with-zlib \
+            --with-lzma=no
 
 make
 make_install toolchain
@@ -23,7 +24,8 @@ cd objdir-target
 do_configure target \
             --enable-ipv6=no \
             --without-python \
-            --with-zlib
+            --with-zlib \
+            --with-lzma=no
 
 make
 make_install
