python numeric : fix build

--- a/packages/python-numeric/build
+++ b/packages/python-numeric/build
@@ -5,6 +5,9 @@
 cd $BUILD/$1*
 
 export PYTHONXCPREFIX="$LIB_PREFIX"
+CFLAGS=$(echo $CFLAGS | sed -e "s%-ffast-math%%")
+CXXFLAGS=$(echo $CXXFLAGS | sed -e "s%-ffast-math%%")
+LDFLAGS=$(echo $LDFLAGS | sed -e "s%-ffast-math%%")
 
 python setup.py build --cross-compile
 python setup.py install -O1 --skip-build --prefix /usr --root .install
