--- a/config/defconfigs/base-armada5xx-cubox.conf
+++ b/config/defconfigs/base-armada5xx-cubox.conf
@@ -532,6 +532,7 @@ CONFIG_OPT_ncurses_terminfo=y
 # CONFIG_PKG_ncursesw is not set
 # CONFIG_PKG_neon is not set
 # CONFIG_PKG_net-snmp is not set
+# CONFIG_PKG_netatalk is not set
 CONFIG_PKG_nettle=y
 # CONFIG_PKG_nss-mdns is not set
 CONFIG_PKG_openssl=y
