--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -572,6 +572,7 @@ CONFIG_OPT_ncurses_terminfo=y
 # CONFIG_PKG_ncursesw is not set
 CONFIG_PKG_neon=y
 CONFIG_PKG_net-snmp=m
+CONFIG_PKG_netatalk=m
 CONFIG_PKG_nettle=y
 # CONFIG_PKG_nss-mdns is not set
 CONFIG_PKG_openssl=y
