--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -580,6 +580,7 @@ CONFIG_PKG_ncurses=y
 CONFIG_PKG_ncursesw=y
 CONFIG_PKG_neon=m
 # CONFIG_PKG_net-snmp is not set
+CONFIG_PKG_netatalk=m
 CONFIG_PKG_nettle=y
 # CONFIG_PKG_nss-mdns is not set
 CONFIG_PKG_openssl=y
