--- a/config/defconfigs/base-omap4-pandaboard.conf
+++ b/config/defconfigs/base-omap4-pandaboard.conf
@@ -467,6 +467,7 @@ CONFIG_PKG_libusb-compat=y
 # CONFIG_PKG_ncursesw is not set
 # CONFIG_PKG_neon is not set
 # CONFIG_PKG_net-snmp is not set
+# CONFIG_PKG_netatalk is not set
 CONFIG_PKG_nettle=y
 # CONFIG_PKG_nss-mdns is not set
 # CONFIG_PKG_openssl is not set
