--- a/config/defconfigs/geexbox-xbmc-omap3-igepv2.conf
+++ b/config/defconfigs/geexbox-xbmc-omap3-igepv2.conf
@@ -578,6 +578,7 @@ CONFIG_OPT_ncurses_terminfo=y
 # CONFIG_PKG_ncursesw is not set
 CONFIG_PKG_neon=m
 # CONFIG_PKG_net-snmp is not set
+CONFIG_PKG_netatalk=m
 CONFIG_PKG_nettle=y
 # CONFIG_PKG_nss-mdns is not set
 CONFIG_PKG_openssl=y
