Signed-off-by: Oliver Schinagl <oliver+list@schinagl.nl> ---  packages/libplist/build |    1 +  1 files changed, 1 insertions(+), 0 deletions(-)

--- a/packages/libplist/build
+++ b/packages/libplist/build
@@ -9,6 +9,7 @@ mkdir -p obj-target
 cd obj-target
 cmake -DCMAKE_INSTALL_PREFIX=/usr \
       -DENABLE_CYTHON=OFF \
+      -DENABLE_SWIG=OFF \
       -DCMAKE_FIND_ROOT_PATH=$LIB_PREFIX \
       ..
 
