--- a/packages/netatalk/build
+++ b/packages/netatalk/build
@@ -5,7 +5,7 @@
 get_meta $1
 cd $PKG_BUILD_DIR
 
-do_configure --with-bdb=$LIB_PREFIX
+do_configure --with-bdb=$LIB_PREFIX --with-ssl-dir=$LIB_PREFIX
 
 make
 make_install
