add ethtool to i386 & x86_64 defconfigs

--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -662,7 +662,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_cups-filters is not set
 # CONFIG_PKG_elfutils is not set
 # CONFIG_PKG_epson-inkjet-printer-escpr is not set
-# CONFIG_PKG_ethtool is not set
+CONFIG_PKG_ethtool=m
 # CONFIG_PKG_evemu is not set
 # CONFIG_PKG_foomatic-db is not set
 # CONFIG_PKG_foomatic-db-engine is not set
