enable xbmc-pvr-addons for all geexbox-xbmc* defconfigs

--- a/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
@@ -815,7 +815,7 @@ CONFIG_PKG_xbmc-addon-navi-x=y
 CONFIG_PKG_xbmc-addon-vuplus=y
 # CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-eventclient is not set
-# CONFIG_PKG_xbmc-pvr-addons is not set
+CONFIG_PKG_xbmc-pvr-addons=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
