--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -843,7 +843,7 @@ CONFIG_PKG_xbmc-addon-bluecop=y
 CONFIG_PKG_xbmc-addon-vuplus=y
 CONFIG_PKG_xbmc-addon-xvdr=y
 # CONFIG_PKG_xbmc-eventclient is not set
-# CONFIG_PKG_xbmc-pvr-addons is not set
+CONFIG_PKG_xbmc-pvr-addons=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
