[nano] avoid nanorc load errors

--- a/packages/nano/build
+++ b/packages/nano/build
@@ -27,3 +27,8 @@ do_configure \
 
 make
 make_install
+
+if [ $TARGET_ARCH = arm ] ; then
+  FILES=.install/usr/share/nano/*.nanorc
+  for f in $FILES ; do sed -e"s/\\\</\\\b/g" -e"s/\\\>/\\\b/g" -i $f ; done
+fi
