enable nano editor fro CuBox and RaspberryPi

--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -1103,7 +1103,7 @@ CONFIG_PKG_ghostscript=m
 # CONFIG_PKG_lsof is not set
 CONFIG_PKG_mc=m
 # CONFIG_PKG_msttcorefonts is not set
-# CONFIG_PKG_nano is not set
+CONFIG_PKG_nano=y
 # CONFIG_PKG_omapconf is not set
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
