[nano] improve build script

--- a/packages/nano/build
+++ b/packages/nano/build
@@ -29,6 +29,5 @@ make
 make_install
 
 if [ $TARGET_ARCH = arm ] ; then
-  FILES=.install/usr/share/nano/*.nanorc
-  for f in $FILES ; do sed -e"s/\\\</\\\b/g" -e"s/\\\>/\\\b/g" -i $f ; done
+  sed -e"s/\\\</\\\b/g" -e"s/\\\>/\\\b/g" -i .install/usr/share/nano/*.nanorc
 fi
