--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -479,6 +479,7 @@ CONFIG_PKG_libcec=y
 # CONFIG_PKG_libcroco is not set
 CONFIG_PKG_libdaemon=y
 CONFIG_PKG_libdri2=y
+CONFIG_PKG_libdvbcsa=y
 # CONFIG_PKG_libdvbpsi is not set
 CONFIG_PKG_libdvdnav=y
 CONFIG_PKG_libdvdread=y
@@ -736,6 +737,7 @@ CONFIG_PKG_mpd=y
 # CONFIG_PKG_ti-omap4-domx is not set
 CONFIG_PKG_tvheadend=y
 # CONFIG_OPT_tvheadend_zeroconf is not set
+CONFIG_OPT_tvheadend_dvbcsa=y
 CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
