--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -487,6 +487,7 @@ CONFIG_PKG_libcec=y
 # CONFIG_PKG_libcroco is not set
 CONFIG_PKG_libdaemon=y
 CONFIG_PKG_libdri2=y
+CONFIG_PKG_libdvbcsa=m
 # CONFIG_PKG_libdvbpsi is not set
 CONFIG_PKG_libdvdnav=y
 CONFIG_PKG_libdvdread=y
