--- a/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
@@ -479,6 +479,7 @@ CONFIG_PKG_libcdio=y
 # CONFIG_PKG_libcroco is not set
 CONFIG_PKG_libdaemon=y
 CONFIG_PKG_libdri2=y
+CONFIG_PKG_libdvbcsa=y
 # CONFIG_PKG_libdvbpsi is not set
 # CONFIG_PKG_libdvdnav is not set
 # CONFIG_PKG_libdvdread is not set
@@ -732,6 +733,7 @@ CONFIG_PKG_mpd=m
 # CONFIG_PKG_ti-omap4-domx is not set
 CONFIG_PKG_tvheadend=y
 CONFIG_OPT_tvheadend_zeroconf=y
+CONFIG_OPT_tvheadend_dvbcsa=y
 # CONFIG_PKG_vdr is not set
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
