--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -486,6 +486,7 @@ CONFIG_PKG_libcec=y
 # CONFIG_PKG_libcroco is not set
 CONFIG_PKG_libdaemon=y
 CONFIG_PKG_libdri2=y
+CONFIG_PKG_libdvbcsa=y
 # CONFIG_PKG_libdvbpsi is not set
 # CONFIG_PKG_libdvdnav is not set
 # CONFIG_PKG_libdvdread is not set
@@ -733,6 +734,7 @@ CONFIG_PKG_mpd=m
 # CONFIG_PKG_showtime is not set
 CONFIG_PKG_tvheadend=y
 # CONFIG_OPT_tvheadend_zeroconf is not set
+CONFIG_OPT_tvheadend_dvbcsa=y
 CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
