--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -458,6 +458,7 @@ CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcroco is not set
 # CONFIG_PKG_libdaemon is not set
 # CONFIG_PKG_libdri2 is not set
+# CONFIG_PKG_libdvbcsa is not set
 # CONFIG_PKG_libdvbpsi is not set
 # CONFIG_PKG_libdvdnav is not set
 # CONFIG_PKG_libdvdread is not set
