--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -503,6 +503,7 @@ CONFIG_PKG_libcdio=y
 # CONFIG_PKG_libcroco is not set
 CONFIG_PKG_libdaemon=y
 CONFIG_PKG_libdri2=y
+# CONFIG_PKG_libdvbcsa is not set
 # CONFIG_PKG_libdvbpsi is not set
 CONFIG_PKG_libdvdnav=y
 CONFIG_PKG_libdvdread=y
