--- a/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
+++ b/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
@@ -481,6 +481,7 @@ CONFIG_PKG_libcec=y
 # CONFIG_PKG_libcroco is not set
 CONFIG_PKG_libdaemon=y
 # CONFIG_PKG_libdri2 is not set
+CONFIG_PKG_libdvbcsa=y
 # CONFIG_PKG_libdvbpsi is not set
 # CONFIG_PKG_libdvdnav is not set
 # CONFIG_PKG_libdvdread is not set
@@ -730,6 +731,7 @@ CONFIG_PKG_mpd=m
 # CONFIG_PKG_ti-omap4-domx is not set
 CONFIG_PKG_tvheadend=y
 # CONFIG_OPT_tvheadend_zeroconf is not set
+CONFIG_OPT_tvheadend_dvbcsa=y
 CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
