--- a/config/defconfigs/geexbox-xbmc-omap3-igepv2.conf
+++ b/config/defconfigs/geexbox-xbmc-omap3-igepv2.conf
@@ -486,6 +486,7 @@ CONFIG_PKG_libcdio=y
 # CONFIG_PKG_libcroco is not set
 CONFIG_PKG_libdaemon=y
 CONFIG_PKG_libdri2=y
+CONFIG_PKG_libdvbcsa=y
 # CONFIG_PKG_libdvbpsi is not set
 # CONFIG_PKG_libdvdnav is not set
 # CONFIG_PKG_libdvdread is not set
