--- a/config/defconfigs/base-omap4-pandaboard.conf
+++ b/config/defconfigs/base-omap4-pandaboard.conf
@@ -702,6 +702,7 @@ CONFIG_PKG_connman=y
 # CONFIG_PKG_hostapd is not set
 CONFIG_PKG_iptables=y
 # CONFIG_PKG_iw is not set
+# CONFIG_PKG_lighttpd is not set
 # CONFIG_PKG_mysql-client is not set
 # CONFIG_PKG_mysql-server is not set
 CONFIG_PKG_network-backend=y
