--- a/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
+++ b/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
@@ -839,6 +839,7 @@ CONFIG_OPT_connman_wifi=y
 # CONFIG_PKG_hostapd is not set
 CONFIG_PKG_iptables=y
 # CONFIG_PKG_iw is not set
+CONFIG_PKG_lighttpd=m
 # CONFIG_PKG_mysql-client is not set
 # CONFIG_PKG_mysql-server is not set
 CONFIG_PKG_network-backend=y
