--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -846,6 +846,7 @@ CONFIG_OPT_dropbear_scp=y
 # CONFIG_PKG_hostapd is not set
 CONFIG_PKG_iptables=y
 # CONFIG_PKG_iw is not set
+CONFIG_PKG_lighttpd=m
 # CONFIG_PKG_mysql-client is not set
 # CONFIG_PKG_mysql-server is not set
 CONFIG_PKG_network-backend=y
