--- a/config/defconfigs/base-omap4-pandaboard.conf
+++ b/config/defconfigs/base-omap4-pandaboard.conf
@@ -708,6 +708,7 @@ CONFIG_PKG_iptables=y
 CONFIG_PKG_network-backend=y
 # CONFIG_PKG_olsrd is not set
 # CONFIG_PKG_openvpn is not set
+# CONFIG_PKG_php is not set
 # CONFIG_PKG_samba-client is not set
 # CONFIG_PKG_samba-server is not set
 # CONFIG_PKG_tcpdump is not set
