--- a/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
@@ -843,6 +843,7 @@ CONFIG_PKG_lighttpd=m
 CONFIG_PKG_network-backend=y
 # CONFIG_PKG_olsrd is not set
 # CONFIG_PKG_openvpn is not set
+CONFIG_PKG_php=m
 CONFIG_PKG_samba-client=y
 # CONFIG_PKG_samba-server is not set
 # CONFIG_PKG_tcpdump is not set
