lighttpd : fix server settings with php and rpc

--- a/packages/lighttpd/build
+++ b/packages/lighttpd/build
@@ -20,7 +20,10 @@ do_configure \
 make
 make_install
 
-mkdir -p .install/etc .install/www/logs .install/www/pages
+mkdir -p .install/etc/lighttpd .install/var/log/lighttpd .install/srv/www/htdocs
 
-cp $ROOT/$PACKAGES/$1/config/lighttpd.conf .install/etc
-cp $ROOT/$PACKAGES/$1/config/index.html .install/www/pages
+cp $ROOT/$PACKAGES/$1/config/lighttpd.conf .install/etc/lighttpd
+cp doc/config/modules.conf .install/etc/lighttpd
+cp -R doc/config/conf.d .install/etc/lighttpd
+cp -R doc/config/vhosts.d .install/etc/lighttpd
+cp $ROOT/$PACKAGES/$1/config/index.html .install/srv/www/htdocs
