--- a/packages/lighttpd/unit/lighttpd.service
+++ b/packages/lighttpd/unit/lighttpd.service
@@ -3,8 +3,8 @@ Description=Lighttpd Daemon
 After=network.target
 
 [Service]
-ExecStartPre=/usr/sbin/lighttpd -t -f /etc/lighttpd.conf
-ExecStart=/usr/sbin/lighttpd -D -f /etc/lighttpd.conf
+ExecStartPre=/usr/sbin/lighttpd -t -f /etc/lighttpd/lighttpd.conf
+ExecStart=/usr/sbin/lighttpd -D -f /etc/lighttpd/lighttpd.conf
 
 [Install]
 WantedBy=multi-user.target
