--- a/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
+++ b/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
@@ -587,7 +587,7 @@ CONFIG_PKG_raspberrypi-userland=y
 CONFIG_OPT_raspberrypiuserland_devtools=y
 CONFIG_PKG_readline=y
 # CONFIG_PKG_rest is not set
-# CONFIG_PKG_rtorrent is not set
+CONFIG_PKG_rtorrent=m
 # CONFIG_PKG_sg3-utils is not set
 # CONFIG_PKG_smpeg is not set
 # CONFIG_PKG_sofia-sip is not set
@@ -661,6 +661,7 @@ CONFIG_PKG_pvr=y
 CONFIG_OPT_pvr_tvheadend=y
 CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_rsync is not set
+CONFIG_PKG_rutorrent=m
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
 # CONFIG_PKG_usbhubctrl is not set
@@ -1105,7 +1106,7 @@ CONFIG_PKG_nano=y
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
 # CONFIG_PKG_ruby is not set
-# CONFIG_PKG_screen is not set
+CONFIG_PKG_screen=m
 # CONFIG_PKG_snowball-mactool is not set
 CONFIG_PKG_strace=y
 # CONFIG_PKG_tools-generator is not set
