--- a/config/defconfigs/geexbox-xbmc-omap3-igepv2.conf
+++ b/config/defconfigs/geexbox-xbmc-omap3-igepv2.conf
@@ -598,7 +598,7 @@ CONFIG_PKG_pcre=y
 # CONFIG_PKG_raspberrypi-userland is not set
 # CONFIG_PKG_readline is not set
 # CONFIG_PKG_rest is not set
-# CONFIG_PKG_rtorrent is not set
+CONFIG_PKG_rtorrent=m
 # CONFIG_PKG_sg3-utils is not set
 # CONFIG_PKG_smpeg is not set
 # CONFIG_PKG_sofia-sip is not set
@@ -670,6 +670,7 @@ CONFIG_PKG_pastebincl=y
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
 # CONFIG_PKG_rsync is not set
+CONFIG_PKG_rutorrent=m
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
 # CONFIG_PKG_usbhubctrl is not set
@@ -1113,7 +1114,7 @@ CONFIG_PKG_mc=m
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
 # CONFIG_PKG_ruby is not set
-# CONFIG_PKG_screen is not set
+CONFIG_PKG_screen=m
 # CONFIG_PKG_snowball-mactool is not set
 # CONFIG_PKG_strace is not set
 # CONFIG_PKG_tools-generator is not set
