--- a/config/defconfigs/base-armada5xx-cubox.conf
+++ b/config/defconfigs/base-armada5xx-cubox.conf
@@ -623,6 +623,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
 # CONFIG_PKG_rsync is not set
+# CONFIG_PKG_rutorrent is not set
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
 # CONFIG_PKG_usbhubctrl is not set
