--- a/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
@@ -663,6 +663,7 @@ CONFIG_PKG_pastebincl=y
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
 # CONFIG_PKG_rsync is not set
+CONFIG_PKG_rutorrent=m
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
 # CONFIG_PKG_usbhubctrl is not set
