--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -671,6 +671,7 @@ CONFIG_PKG_pvr=y
 CONFIG_OPT_pvr_tvheadend=y
 CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_rsync is not set
+CONFIG_PKG_rutorrent=m
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
 # CONFIG_PKG_usbhubctrl is not set
