php* : fix build

--- a/packages/php/build
+++ b/packages/php/build
@@ -7,6 +7,7 @@ cd $PKG_BUILD_DIR
 
 export ac_cv_php_xml2_config_path=$LIB_PREFIX/bin/xml2-config
 export PHP_NATIVE_DIR=$ROOT/$TOOLCHAIN/bin
+export MAKEFLAGS=-j1
 
 do_configure --without-iconv --without-sqlite3 --without-pdo-sqlite
 
