--- a/packages/php-host/build
+++ b/packages/php-host/build
@@ -6,7 +6,7 @@ get_meta $1
 cd $PKG_BUILD_DIR
 
 export ac_cv_php_xml2_config_path=$ROOT/$TOOLCHAIN/bin/xml2-config
-
+export MAKEFLAGS=-j1
 do_configure host
 
 make
