--- a/config/defconfigs/base-armada5xx-cubox.conf
+++ b/config/defconfigs/base-armada5xx-cubox.conf
@@ -469,6 +469,7 @@ CONFIG_PKG_libgles-gc=y
 CONFIG_PKG_libjpeg-turbo=y
 # CONFIG_PKG_liblockdev is not set
 CONFIG_PKG_libmad=m
+# CONFIG_PKG_libmediainfo is not set
 # CONFIG_PKG_libmicrohttpd is not set
 # CONFIG_PKG_libmms is not set
 # CONFIG_PKG_libmodplug is not set
@@ -522,6 +523,7 @@ CONFIG_PKG_libxml2=y
 # CONFIG_PKG_libxslt is not set
 # CONFIG_PKG_libyaml is not set
 # CONFIG_PKG_libz160 is not set
+# CONFIG_PKG_libzen is not set
 # CONFIG_PKG_lzo is not set
 # CONFIG_PKG_marvell-ipp is not set
 # CONFIG_PKG_mediastreamer is not set
@@ -615,6 +617,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_madplay is not set
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
+# CONFIG_PKG_mediainfo is not set
 # CONFIG_PKG_nbench is not set
 # CONFIG_PKG_nzbget is not set
 # CONFIG_PKG_pastebincl is not set
