--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -524,6 +524,7 @@ CONFIG_PKG_libgpg-error=y
 CONFIG_PKG_libjpeg-turbo=y
 # CONFIG_PKG_liblockdev is not set
 CONFIG_PKG_libmad=y
+# CONFIG_PKG_libmediainfo is not set
 CONFIG_PKG_libmicrohttpd=y
 CONFIG_PKG_libmms=y
 CONFIG_PKG_libmodplug=y
@@ -578,6 +579,7 @@ CONFIG_PKG_libvorbis=y
 CONFIG_PKG_libxml2=y
 CONFIG_PKG_libxslt=y
 CONFIG_PKG_libyaml=y
+# CONFIG_PKG_libzen is not set
 CONFIG_PKG_lzo=y
 # CONFIG_PKG_marvell-ipp is not set
 # CONFIG_PKG_mediastreamer is not set
@@ -680,6 +682,7 @@ CONFIG_PKG_libglu=y
 # CONFIG_PKG_madplay is not set
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
+# CONFIG_PKG_mediainfo is not set
 # CONFIG_PKG_nbench is not set
 # CONFIG_PKG_nzbget is not set
 # CONFIG_PKG_pastebincl is not set
