--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -524,6 +524,7 @@ CONFIG_PKG_libgpg-error=y
 CONFIG_PKG_libjpeg-turbo=y
 CONFIG_PKG_liblockdev=y
 CONFIG_PKG_libmad=y
+CONFIG_PKG_libmediainfo=m
 CONFIG_PKG_libmicrohttpd=y
 CONFIG_PKG_libmms=y
 CONFIG_PKG_libmodplug=y
@@ -578,6 +579,7 @@ CONFIG_PKG_libvorbis=y
 CONFIG_PKG_libxml2=y
 # CONFIG_PKG_libxslt is not set
 # CONFIG_PKG_libyaml is not set
+CONFIG_PKG_libzen=m
 CONFIG_PKG_lzo=y
 # CONFIG_PKG_marvell-ipp is not set
 # CONFIG_PKG_mediastreamer is not set
@@ -679,6 +681,7 @@ CONFIG_PKG_libglu=y
 # CONFIG_PKG_madplay is not set
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
+CONFIG_PKG_mediainfo=m
 # CONFIG_PKG_nbench is not set
 CONFIG_PKG_nzbget=m
 CONFIG_PKG_pastebincl=y
