--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -680,6 +680,7 @@ CONFIG_OPT_pvr_vdr=y
 CONFIG_PKG_rutorrent=m
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+CONFIG_PKG_unzip=m
 # CONFIG_PKG_usbhubctrl is not set
 CONFIG_PKG_wayland=y
 # CONFIG_PKG_webrtc-audio-processing is not set
