--- a/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
@@ -667,6 +667,7 @@ CONFIG_PKG_pastebincl=y
 CONFIG_PKG_rutorrent=m
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+CONFIG_PKG_unzip=m
 # CONFIG_PKG_usbhubctrl is not set
 # CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
