--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -695,6 +695,7 @@ CONFIG_OPT_pvr_vdr=y
 CONFIG_PKG_rutorrent=m
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+CONFIG_PKG_unzip=m
 # CONFIG_PKG_usbhubctrl is not set
 # CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
