--- a/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
@@ -683,7 +683,8 @@ CONFIG_PKG_unzip=m
 # CONFIG_PKG_MPlayer is not set
 # CONFIG_PKG_dvbstreamer is not set
 # CONFIG_PKG_enna is not set
-# CONFIG_PKG_ffmpeg is not set
+CONFIG_PKG_ffmpeg=m
+# CONFIG_OPT_ffmpeg_vaapi is not set
 # CONFIG_PKG_freevo is not set
 # CONFIG_PKG_freevo-svn is not set
 # CONFIG_PKG_gst-auto-launch is not set
