--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -701,7 +701,8 @@ CONFIG_OPT_GStreamer_ffmpeg=y
 # CONFIG_PKG_MPlayer is not set
 # CONFIG_PKG_dvbstreamer is not set
 # CONFIG_PKG_enna is not set
-# CONFIG_PKG_ffmpeg is not set
+CONFIG_PKG_ffmpeg=m
+# CONFIG_OPT_ffmpeg_vaapi is not set
 # CONFIG_PKG_freevo is not set
 # CONFIG_PKG_freevo-svn is not set
 # CONFIG_PKG_gst-auto-launch is not set
