--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -95,6 +95,7 @@ CONFIG_OPT_TARGET_PXE=y
 # CONFIG_OPT_TARGET_TARBALL is not set
 # CONFIG_OPT_TARGET_EXT2FS is not set
 # CONFIG_OPT_TARGET_INITRAMFS is not set
+# CONFIG_OPT_TARGET_SDCARD_GEN is not set
 CONFIG_OPT_PACKAGE_REPO=y
 # CONFIG_TIMEZONE is not set
 CONFIG_KEYMAP_US=y
