--- a/config/defconfigs/geexbox-xbmc-ux500-snowball-v5.conf
+++ b/config/defconfigs/geexbox-xbmc-ux500-snowball-v5.conf
@@ -106,6 +106,7 @@ CONFIG_OPT_TARGET_FLAT=y
 CONFIG_OPT_TARGET_TARBALL=y
 # CONFIG_OPT_TARGET_EXT2FS is not set
 # CONFIG_OPT_TARGET_INITRAMFS is not set
+CONFIG_OPT_TARGET_SDCARD_GEN=y
 CONFIG_OPT_TARGET_SNOWBALL_EMMC=y
 CONFIG_OPT_PACKAGE_REPO=y
 # CONFIG_TIMEZONE is not set
