--- a/config/defconfigs/base-armada5xx-cubox.conf
+++ b/config/defconfigs/base-armada5xx-cubox.conf
@@ -96,6 +96,7 @@ CONFIG_OPT_TARGET_FLAT=y
 # CONFIG_OPT_TARGET_TARBALL is not set
 # CONFIG_OPT_TARGET_EXT2FS is not set
 # CONFIG_OPT_TARGET_INITRAMFS is not set
+# CONFIG_OPT_TARGET_SDCARD_GEN is not set
 # CONFIG_OPT_PACKAGE_REPO is not set
 # CONFIG_TIMEZONE is not set
 CONFIG_KEYMAP_US=y
