--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -121,6 +121,7 @@ CONFIG_OPT_TARGET_ISO=y
 # CONFIG_OPT_TARGET_TARBALL is not set
 # CONFIG_OPT_TARGET_EXT2FS is not set
 # CONFIG_OPT_TARGET_INITRAMFS is not set
+# CONFIG_OPT_TARGET_SDCARD_GEN is not set
 CONFIG_OPT_PACKAGE_REPO=y
 # CONFIG_TIMEZONE is not set
 CONFIG_KEYMAP_US=y
