--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -105,6 +105,7 @@ CONFIG_OPT_TARGET_FLAT=y
 CONFIG_OPT_TARGET_TARBALL=y
 # CONFIG_OPT_TARGET_EXT2FS is not set
 # CONFIG_OPT_TARGET_INITRAMFS is not set
+CONFIG_OPT_TARGET_SDCARD_GEN=y
 CONFIG_OPT_PACKAGE_REPO=y
 CONFIG_TIMEZONE=y
 CONFIG_OPT_INCLUDED_TIMEZONES="all"
