[CuBox] specify root fs type in kernel command line

--- a/config/platforms/arm/armada5xx/boot.cfg
+++ b/config/platforms/arm/armada5xx/boot.cfg
@@ -39,7 +39,7 @@ if itest.s $boot_found -eq 0; then
   fi
 fi
     
-setenv bootargs console=ttyS0,115200n8 vmalloc=448M root=$boot_device video=dovefb:lcd0:1920x1080-32@60-edid clcd.lcd0_enable=1 clcd.lcd1_enable=0
+setenv bootargs console=ttyS0,115200n8 vmalloc=448M root=$boot_device video=dovefb:lcd0:1920x1080-32@60-edid clcd.lcd0_enable=1 clcd.lcd1_enable=0 rootfstype=ext4
 echo ======== Booting kernel ========
 bootm
 
