systemd : bump version to 197

--- a/packages/systemd/build
+++ b/packages/systemd/build
@@ -5,6 +5,7 @@ get_meta $1
 
 cd $PKG_BUILD_DIR
 
+export ac_cv_func_malloc_0_nonnull=yes
 GCC_NO_LTO=1 GCC_NO_GOLD=1 \
 do_configure \
             --disable-gtk-doc-html \
@@ -40,11 +41,12 @@ do_configure \
             --with-usb-ids-path=/usr/share/misc/usb.ids \
             --with-firmware-path=/firmware \
             --with-sysvinit-path= \
-            --with-sysvrcd-path= \
+            --with-sysvrcnd-path= \
             --with-pamlibdir= \
             --with-rootprefix= \
             --with-rootlibdir=/lib \
             --without-python \
+            --disable-bootchart \
 
 make
 make_install
