[CuBox] u-boot : allow to running from USB

--- a/config/platforms/arm/armada5xx/boot.cfg
+++ b/config/platforms/arm/armada5xx/boot.cfg
@@ -1,45 +1,29 @@
-echo ======== Setting bootargs and loading kernel ========
-setenv boot_found 0
+echo "== Executing ${directory}${bootscript} on ${device_name} partition ${partition} =="
 
-ext4ls mmc 0:2 /
-if itest.s $? -eq 0; then
-  echo "Detected two partitions config (ext2/ext4)"
-  setenv boot_device /dev/mmcblk0p2
-  ext2load mmc 0:1 0x00200000 /uImage
-  setenv boot_found 1
+setenv unit_no 0
+setenv root_device ?
+
+if itest.s ${device_name} -eq usb; then
+  itest.s $root_device -eq ? && ext4ls usb 0:1 /dev && setenv root_device /dev/sda1 && setenv unit_no 0
+  itest.s $root_device -eq ? && ext4ls usb 1:1 /dev && setenv root_device /dev/sda1 && setenv unit_no 1
 fi
 
-if itest.s $boot_found -eq 0; then
-  ext4ls mmc 0:1 /
-  if itest.s $? -eq 0; then
-    echo "Detected one partition on mmc"
-    setenv boot_device /dev/mmcblk0p1
-    ext4load mmc 0:1 0x00200000 /boot/uImage
-    setenv boot_found 1
-  fi
-fi 
-
-if itest.s $boot_found -eq 0; then
-  ext4ls usb 0:1 /
-  if itest.s $? -eq 0; then
-    echo "Detected partition on usb 0"
-    setenv boot_device /dev/sda1
-    ext4load usb 0:1 0x00200000 /boot/uImage
-    setenv boot_found 1
-  fi
+if itest.s ${device_name} -eq mmc; then
+  itest.s $root_device -eq ? && ext4ls mmc 0:2 /dev && setenv root_device /dev/mmcblk0p2
+  itest.s $root_device -eq ? && ext4ls mmc 0:1 /dev && setenv root_device /dev/mmcblk0p1
 fi
 
-if itest.s $boot_found -eq 0; then
-  ext4ls usb 1:1 /
-  if itest.s $? -eq 0; then
-    echo "Detected partition on usb 1"
-    setenv boot_device /dev/sdb1
-    ext4load usb 1:1 0x00200000 /boot/uImage
-    setenv boot_found 1
-  fi
+if itest.s ${device_name} -eq ide; then
+  itest.s $root_device -eq ? && ext4ls ide 0:1 /dev && setenv root_device /dev/sda1
 fi
-    
-setenv bootargs console=ttyS0,115200n8 vmalloc=448M root=$boot_device video=dovefb:lcd0:1920x1080-32@60-edid clcd.lcd0_enable=1 clcd.lcd1_enable=0 rootfstype=ext4
-echo ======== Booting kernel ========
-bootm
 
+if itest.s $root_device -ne ?; then
+  setenv bootargs "console=ttyS0,115200n8 vmalloc=448M video=dovefb:lcd0:1920x1080-32@60-edid clcd.lcd0_enable=1 clcd.lcd1_enable=0 root=${root_device} rootfstype=ext4"
+  setenv loadimage "${fstype}load ${device_name} ${unit_no}:${partition} 0x00200000 ${directory}${image_name}" 
+  $loadimage && bootm 0x00200000
+  
+  echo "!! Unable to load ${directory}${image_name} from ${device_name} ${unit_no}:${partition} !!"
+  exit
+fi
+
+echo "!! Unable to locate root partition on ${device_name} !!"
